[gd_scene load_steps=3 format=3 uid="uid://bjghdbj2hi7hl"]

[ext_resource type="Script" path="res://Scripts/loudness.gd" id="1_cgf4x"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_psnd5"]

[node name="Loudness" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1952.0
offset_bottom = 1139.0
script = ExtResource("1_cgf4x")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_psnd5")
autoplay = true
bus = &"Record"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 151.0
offset_top = 22.0
offset_right = 1590.0
offset_bottom = 860.0

[node name="Reload" type="Button" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 941.0
offset_right = 502.0
offset_bottom = 990.0
text = "Reload"

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 944.0
offset_right = 321.0
offset_bottom = 985.0
text = "Select"

[node name="DeviceInfo" type="Label" parent="."]
layout_mode = 0
offset_left = 995.0
offset_top = 946.0
offset_right = 1401.0
offset_bottom = 1000.0

[node name="Awazmeter" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1686.0
offset_top = 41.0
offset_right = 1795.0
offset_bottom = 831.0
max_value = 200.0
fill_mode = 3
show_percentage = false

[connection signal="pressed" from="Reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
